--- a/src/views/admin/statistics/statistics.ejs
+++ b/src/views/admin/statistics/statistics.ejs
@@ -58,12 +58,12 @@
             <div class="card-body">
               <div class="row">
                 <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Tất cả gói tin</h5>
-                  <span class="h2 font-weight-bold mb-0" id="total-package"></span>
+                  <h5 class="card-title text-uppercase text-muted mb-0">Danh mục</h5>
+                  <span class="h2 font-weight-bold mb-0" id="total-category"></span>
                 </div>
                 <div class="col-auto">
                   <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
-                    <i class="fa fa-solid fa-bolt"></i>
+                    <i class="fa fa-solid fa-bars"></i>
                   </div>
                 </div>
               </div>
@@ -75,8 +75,42 @@
             <div class="card-body">
               <div class="row">
                 <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Danh mục</h5>
-                  <span class="h2 font-weight-bold mb-0" id="total-category"></span>
+                  <h5 class="card-title text-uppercase text-muted mb-0">Gói Vip 1</h5>
+                  <span class="h2 font-weight-bold mb-0" id="total-vip1"></span>
+                </div>
+                <div class="col-auto">
+                  <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
+                    <i class="fa fa-solid fa-bars"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-3 col-lg-6 mt-2">
+          <div class="card card-stats mb-4 mb-xl-0">
+            <div class="card-body">
+              <div class="row">
+                <div class="col">
+                  <h5 class="card-title text-uppercase text-muted mb-0">Gói Vip 2</h5>
+                  <span class="h2 font-weight-bold mb-0" id="total-vip2"></span>
+                </div>
+                <div class="col-auto">
+                  <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
+                    <i class="fa fa-solid fa-bars"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-xl-3 col-lg-6 mt-2">
+          <div class="card card-stats mb-4 mb-xl-0">
+            <div class="card-body">
+              <div class="row">
+                <div class="col">
+                  <h5 class="card-title text-uppercase text-muted mb-0">Gói Vip 3</h5>
+                  <span class="h2 font-weight-bold mb-0" id="total-vip3"></span>
                 </div>
                 <div class="col-auto">
                   <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
