--- a/src/views/admin/posts/admin.ejs
+++ b/src/views/admin/posts/admin.ejs
@@ -373,7 +373,7 @@
     <td data-id="action">
       <button id="remove-btn" type="button" class="btn btn-sm btn-danger">Remove</button>
     </td>
-    <td data-id="pack"></td>
+    <!-- <td data-id="pack"></td> -->
   </tr>
 </template>
 <link
