--- a/src/views/admin/posts/index.ejs
+++ b/src/views/admin/posts/index.ejs
@@ -23,7 +23,7 @@
         class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom"
       >
         <h3 class="h3 me-2">Quản lý tin đăng</h3>
-        <div class="form-group me-auto  d-flex align-items-center gap-3">
+        <div class="form-group me-auto d-flex align-items-center gap-3">
           <input
             style="width: 180px"
             type="text"
@@ -84,7 +84,7 @@
     <td data-id="push">
       <button class="btn btn-info"><i class="fas fa-bolt text-light"></i></button>
     </td>
-    <td data-id="action">
+    <td data-id="action" class="d-flex">
       <button id="edit-btn" type="button" class="btn btn-sm btn-success">Edit</button>
       <button id="remove-btn" type="button" class="btn btn-sm btn-danger">Remove</button>
     </td>
