--- a/src/views/admin/categories/index.ejs
+++ b/src/views/admin/categories/index.ejs
@@ -56,7 +56,7 @@
     <td data-id="number">Số thứ tự</td>
     <td data-id="title"></td>
     <td data-id="date"></td>
-    <td data-id="action" class="text-center">
+    <td data-id="action" class="text-center d-flex">
       <button id="edit-btn" type="button" class="btn btn-sm btn-success">Edit</button>
       <button id="remove-btn" type="button" class="btn btn-sm btn-danger">Remove</button>
     </td>
