--- a/src/views/admin/packages/index.ejs
+++ b/src/views/admin/packages/index.ejs
@@ -25,7 +25,6 @@
         <h3 class="h3">Quản lý gói tin</h3>
 
         <div class="btn-toolbar mb-2 mb-md-0">
-        
           <a href="http://localhost:5000/packages/add-edit" class="btn btn-danger btn-sm"
             >Thêm tin mới</a
           >
@@ -70,7 +69,7 @@
     <td data-id="price"></td>
     <td data-id="active"></td>
     <td data-id="date"></td>
-    <td data-id="action">
+    <td data-id="action" class="d-flex">
       <button id="edit-btn" type="button" class="btn btn-sm btn-success">Edit</button>
       <button id="remove-btn" type="button" class="btn btn-sm btn-danger">Remove</button>
     </td>
