--- a/src/views/partials/post.ejs
+++ b/src/views/partials/post.ejs
@@ -68,15 +68,15 @@
     <!-- nếu có category_id thì phân trang cho category_id nếu có search thì phân trang cho search nếu không có gì hết thì phân trang post -->
     <% if (category_id) { %>
     <li class="page-item <%= page === 1 ? 'disabled' : '' %>">
-      <a class="page-link" href="/category/<%= category_id %>?page=<%= page - 1 %>">Previous</a>
+      <a class="page-link" href="/category/<%= category_id %>?page=<%= page - 1 %>">Trước</a>
     </li>
     <% } else if (search) { %>
     <li class="page-item <%= page === 1 ? 'disabled' : '' %>">
-      <a class="page-link" href="/search?<%= search %>&page=<%= page - 1 %>">Previous</a>
+      <a class="page-link" href="/search?<%= search %>&page=<%= page - 1 %>">Trước</a>
     </li>
     <% } else { %>
     <li class="page-item <%= page === 1 ? 'disabled' : '' %>">
-      <a class="page-link" href="/?page=<%= page - 1 %>">Previous</a>
+      <a class="page-link" href="/?page=<%= page - 1 %>">Trước</a>
     </li>
     <% } %> <% for (let i = 1; i <= totalPage; i++) { %> <% if (category_id) { %>
     <li class="page-item <%= page === i ? 'active' : '' %>">
@@ -92,15 +92,15 @@
     </li>
     <% } %> <% } %> <% if (category_id) { %>
     <li class="page-item <%= page === totalPage ? 'disabled' : '' %>">
-      <a class="page-link" href="/category/<%= category_id %>?page=<%= page + 1 %>">Next</a>
+      <a class="page-link" href="/category/<%= category_id %>?page=<%= page + 1 %>">Sau</a>
     </li>
     <% } else if (search) { %>
     <li class="page-item <%= page === totalPage ? 'disabled' : '' %>">
-      <a class="page-link" href="/search?<%= search %>&page=<%= page + 1 %>">Next</a>
+      <a class="page-link" href="/search?<%= search %>&page=<%= page + 1 %>">Sau</a>
     </li>
     <% } else { %>
     <li class="page-item <%= page === totalPage ? 'disabled' : '' %>">
-      <a class="page-link" href="/?page=<%= page + 1 %>">Next</a>
+      <a class="page-link" href="/?page=<%= page + 1 %>">Sau</a>
     </li>
     <% } %>
   </ul>
