--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -125,7 +125,7 @@
       <div class="col-4 w-25">
         <div class="card m-3 bg-white rounded-4 overflow-hidden">
           <a href="search?category=&province=Thành+phố+Cần+Thơ">
-            <img src="../../img/thanhpho.jpeg" class="card-img-top" alt="..." />
+            <img src="../../img/cantho.jpeg" class="card-img-top" alt="..." />
           </a>
           <div class="card-body">
             <a
@@ -139,7 +139,7 @@
       <div class="col-4 w-25">
         <div class="card m-3 bg-white rounded-4 overflow-hidden">
           <a href="search?category=&province=Thành+phố+Hà+Nội">
-            <img src="../../img/thanhpho.jpeg" class="card-img-top" alt="..." />
+            <img src="../../img/hanoi.jpeg" class="card-img-top" alt="..." />
           </a>
           <div class="card-body">
             <a
