--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -17,8 +17,9 @@
             <i class="fas fa-gem me-3"></i>Phòng Trọ Siêu Đẹp
           </h6>
           <p>
-            Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit
-            amet, consectetur adipisicing elit.
+            Chúng tôi cung cấp các dịch vụ tìm kiếm phòng trọ, nhà trọ, căn hộ cho thuê trên toàn
+            quốc. Với hệ thống thông tin phong phú, đa dạng về diện tích, giá cả, vị trí, tiện nghi,
+            chúng tôi tự tin sẽ giúp bạn tìm được căn phòng ưng ý nhất.
           </p>
         </div>
         <!-- Grid column -->
@@ -26,18 +27,18 @@
         <!-- Grid column -->
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
           <!-- Links -->
-          <h6 class="text-uppercase fw-bold mb-4"></h6>
+          <h6 class="text-uppercase fw-bold mb-4">Danh mục</h6>
           <p>
-            <a href="#!" class="text-reset">Angular</a>
+            <a href="#!" class="text-reset"> Phòng trọ </a>
           </p>
           <p>
-            <a href="#!" class="text-reset">React</a>
+            <a href="#!" class="text-reset"> Nhà trọ </a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Vue</a>
+            <a href="#!" class="text-reset"> Căn hộ </a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Laravel</a>
+            <a href="#!" class="text-reset"> Chung cư mini </a>
           </p>
         </div>
         <!-- Grid column -->
@@ -45,18 +46,18 @@
         <!-- Grid column -->
         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
           <!-- Links -->
-          <h6 class="text-uppercase fw-bold mb-4">Useful links</h6>
+          <h6 class="text-uppercase fw-bold mb-4">Liên kết</h6>
           <p>
-            <a href="#!" class="text-reset">Pricing</a>
+            <a href="#!" class="text-reset"> Trang chủ </a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Settings</a>
+            <a href="#!" class="text-reset"> Đăng tin </a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Orders</a>
+            <a href="#!" class="text-reset"> Tìm kiếm </a>
           </p>
           <p>
-            <a href="#!" class="text-reset">Help</a>
+            <a href="#!" class="text-reset"> Liên hệ </a>
           </p>
         </div>
         <!-- Grid column -->
@@ -64,14 +65,16 @@
         <!-- Grid column -->
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
           <!-- Links -->
-          <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-          <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
+          <h6 class="text-uppercase fw-bold mb-4">Liên hệ</h6>
           <p>
-            <i class="fas fa-envelope me-3"></i>
-            info@example.com
+            <i class="fa fas fa-home me-3"></i>
+            Quận Ninh Kiều - TP Cần Thơ
           </p>
-          <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
-          <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
+          <p>
+            <i class="fa fas fa-envelope me-3"></i>
+            tran.vi487@gmail.com
+          </p>
+          <p><i class="fa fas fa-phone me-3"></i> + 01 234 567 88</p>
         </div>
         <!-- Grid column -->
       </div>
