--- a/src/views/postDetails.ejs
+++ b/src/views/postDetails.ejs
@@ -2,11 +2,7 @@
   <main class="container">
     <div class="row justify-content-between mt-2">
       <div class="col-md-8">
-        <div
-          id="carouselExampleIndicators"
-          class="carousel slide"
-          data-bs-ride="carousel"
-        >
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button
               type="button"
@@ -61,13 +57,31 @@
             <h1 class="fw-bold fs-4 text-capitalize"><%= post.title %></h1>
           </div>
           <div class="col-md-2">
-            <div class="card-rate text-warning">
+            <% if ( post.isvip === 'vip3' ) { %>
+            <span class="text-danger">
               <i class="fa fas fa-star"></i>
               <i class="fa fas fa-star"></i>
               <i class="fa fas fa-star"></i>
               <i class="fa fas fa-star"></i>
               <i class="fa fas fa-star"></i>
-            </div>
+            </span>
+
+            <% } %> <% if (post.isvip === "vip2") { %>
+            <span style="color: #ff8b13">
+              <i class="fa fas fa-star"></i>
+              <i class="fa fas fa-star"></i>
+              <i class="fa fas fa-star"></i>
+              <i class="fa fas fa-star"></i>
+            </span>
+            <% } %> <% if (post.isvip === "vip1") { %>
+            <span class="text-warning">
+              <i class="fa fas fa-star"></i>
+              <i class="fa fas fa-star"></i>
+              <i class="fa fas fa-star"></i>
+            </span>
+            <% } %> <% if (post.isvip === "vip0") { %>
+            <span></span>
+            <% } %>
           </div>
           <p class="text-muted m-0 mb-md-2">
             <span>
@@ -77,15 +91,12 @@
           </p>
           <div class="row align-items-center">
             <div class="col-md-7 text-success fw-bold fs-5">
-              <%= post.price.toLocaleString('vi-VN', { style: 'currency',
-              currency: 'VND' }) %><span>/Tháng</span>
+              <%= post.price.toLocaleString('vi-VN', { style: 'currency', currency: 'VND' }) %><span
+                >/Tháng</span
+              >
             </div>
-            <div class="col-md-2 text-muted">
-              <%= post.acreage %><span>m2</span>
-            </div>
-            <div class="col-md-3 text-muted time">
-              <%= moment(post.createdAt).fromNow() %>
-            </div>
+            <div class="col-md-2 text-muted"><%= post.acreage %><span>m2</span></div>
+            <div class="col-md-3 text-muted time"><%= moment(post.createdAt).fromNow() %></div>
           </div>
           <h4 class="fw-bold fs-4 mt-2">Thông tin mô tả</h4>
           <p><%= post.description %></p>
@@ -116,22 +127,19 @@
     </div>
   </main>
   <script>
-    var time = document.querySelectorAll(".time");
+    var time = document.querySelectorAll('.time');
     time.forEach(function (item) {
-      item.innerHTML = item.innerHTML.replace(
-        "a few seconds ago",
-        "vài giây trước"
-      );
-      item.innerHTML = item.innerHTML.replace("a minute ago", "một phút trước");
-      item.innerHTML = item.innerHTML.replace("minutes ago", "phút trước");
-      item.innerHTML = item.innerHTML.replace("an hour ago", "một giờ trước");
-      item.innerHTML = item.innerHTML.replace("hours ago", "giờ trước");
-      item.innerHTML = item.innerHTML.replace("a day ago", "một ngày trước");
-      item.innerHTML = item.innerHTML.replace("days ago", "ngày trước");
-      item.innerHTML = item.innerHTML.replace("a month ago", "một tháng trước");
-      item.innerHTML = item.innerHTML.replace("months ago", "tháng trước");
-      item.innerHTML = item.innerHTML.replace("a year ago", "một năm trước");
-      item.innerHTML = item.innerHTML.replace("years ago", "năm trước");
+      item.innerHTML = item.innerHTML.replace('a few seconds ago', 'vài giây trước');
+      item.innerHTML = item.innerHTML.replace('a minute ago', 'một phút trước');
+      item.innerHTML = item.innerHTML.replace('minutes ago', 'phút trước');
+      item.innerHTML = item.innerHTML.replace('an hour ago', 'một giờ trước');
+      item.innerHTML = item.innerHTML.replace('hours ago', 'giờ trước');
+      item.innerHTML = item.innerHTML.replace('a day ago', 'một ngày trước');
+      item.innerHTML = item.innerHTML.replace('days ago', 'ngày trước');
+      item.innerHTML = item.innerHTML.replace('a month ago', 'một tháng trước');
+      item.innerHTML = item.innerHTML.replace('months ago', 'tháng trước');
+      item.innerHTML = item.innerHTML.replace('a year ago', 'một năm trước');
+      item.innerHTML = item.innerHTML.replace('years ago', 'năm trước');
     });
   </script>
 </body>
