--- a/src/views/admin/categories/index.ejs
+++ b/src/views/admin/categories/index.ejs
@@ -23,7 +23,7 @@
         class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom"
       >
         <h3 class="h3">Quản lý chuyên mục</h3>
-    <a href="http://localhost:5000/categories/add-edit" class="btn btn-danger btn-sm">Tạo chuyên mục mới</a>
+    <a href="https://puce-determined-raven.cyclic.app/categories/add-edit" class="btn btn-danger btn-sm">Tạo chuyên mục mới</a>
        
   
   </div>
