--- a/src/views/admin/packages/index.ejs
+++ b/src/views/admin/packages/index.ejs
@@ -25,7 +25,9 @@
         <h3 class="h3">Quản lý gói tin</h3>
 
         <div class="btn-toolbar mb-2 mb-md-0">
-          <a href="http://localhost:5000/packages/add-edit" class="btn btn-danger btn-sm"
+          <a
+            href="https://puce-determined-raven.cyclic.app/packages/add-edit"
+            class="btn btn-danger btn-sm"
             >Thêm tin mới</a
           >
           <!-- <div class="d-lg-none w-100">
