--- a/src/views/partials/sidebarPanel-copy.ejs
+++ b/src/views/partials/sidebarPanel-copy.ejs
@@ -208,7 +208,10 @@
 </nav>
 <template id="navbarTemplate">
   <li class="nav-item" id="navItemMyPosts">
-    <a class="nav-link active text-dark fw-bold" href="http://localhost:5000/posts/">
+    <a
+      class="nav-link active text-dark fw-bold"
+      href="https://puce-determined-raven.cyclic.app/posts/"
+    >
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="16"
@@ -249,7 +252,7 @@
     </a>
   </li>
   <li class="nav-item" id="navItemCategories">
-    <a class="nav-link text-dark" href="http://localhost:5000/categories">
+    <a class="nav-link text-dark" href="https://puce-determined-raven.cyclic.app/categories">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="16"
@@ -327,7 +330,7 @@
     </a>
   </li>
   <li class="nav-item" id="navItemPackageManagement">
-    <a class="nav-link text-dark" href="http://localhost:5000/packages/">
+    <a class="nav-link text-dark" href="https://puce-determined-raven.cyclic.app/packages/">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="16"
