--- a/src/views/admin/posts/index-copy.ejs
+++ b/src/views/admin/posts/index-copy.ejs
@@ -61,7 +61,9 @@
               <a class="dropdown-item">Tin đang ẩn</a>
             </div>
           </div>
-          <a href="http://localhost:5000/posts/add-edit" class="btn btn-danger btn-sm"
+          <a
+            href="https://puce-determined-raven.cyclic.app/posts/add-edit"
+            class="btn btn-danger btn-sm"
             >Đăng tin mới</a
           >
           <!-- <div class="d-lg-none w-100">
