--- a/src/views/admin/posts/index.ejs
+++ b/src/views/admin/posts/index.ejs
@@ -38,7 +38,7 @@
         </div>
 
         <a
-          href="http://localhost:5000/posts/add-edit"
+          href="https://puce-determined-raven.cyclic.app/posts/add-edit"
           class="btn btn-danger btn-sm text-center mt-2 align-self-md-stretch"
           >Đăng tin mới</a
         >
