--- a/src/views/admin/payment/vnpay-return.ejs
+++ b/src/views/admin/payment/vnpay-return.ejs
@@ -18,7 +18,7 @@
         </ol>
       </nav>
       <div class="row text-center">
-        <% if (code === 97) { %>
+        <% if (code !== 00) { %>
         <h2>Thanh toán không thành công <a class="text-danger" href="/">Quay lại trang chủ</a></h2>
         <% } else { %>
         <h2>
