--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -115,7 +115,7 @@
           </a>
           <div class="card-body">
             <a
-              href="search?category=&province=Thành+phố+Hồ+Chí+Minh"
+              href="https://puce-determined-raven.cyclic.app/search?category=&province=Thành+phố+Hồ+Chí+Minh"
               class="card-title text-primary text-decoration-none"
               >Hồ Chí Minh</a
             >
@@ -124,7 +124,7 @@
       </div>
       <div class="col-4 w-25">
         <div class="card m-3 bg-white rounded-4 overflow-hidden">
-          <a href="search?category=&province=Thành+phố+Cần+Thơ">
+          <a href="https://puce-determined-raven.cyclic.app/search?category=&province=Thành+phố+Cần+Thơ">
             <img src="../../img/cantho.jpeg" class="card-img-top" alt="..." />
           </a>
           <div class="card-body">
@@ -138,7 +138,7 @@
       </div>
       <div class="col-4 w-25">
         <div class="card m-3 bg-white rounded-4 overflow-hidden">
-          <a href="search?category=&province=Thành+phố+Hà+Nội">
+          <a href="https://puce-determined-raven.cyclic.app/search?category=&province=Thành+phố+Hà+Nội">
             <img src="../../img/hanoi.jpeg" class="card-img-top" alt="..." />
           </a>
           <div class="card-body">
