--- a/src/views/admin/posts/add-edit.ejs
+++ b/src/views/admin/posts/add-edit.ejs
@@ -197,14 +197,17 @@
 
           <!-- map -->
           <div class="col-md-4">
-            <div id="map" class="w-100 mb-5" style="height: 400px">
+            <!-- <div id="map" class="w-100 mb-5" style="height: 400px">
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3928.638429542831!2d105.76562691406565!3d10.04666547498736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31a0880f08006ffb%3A0x9a745510330faf4e!2zVHLGsOG7nW5nIMSQ4bqhaSBo4buNYyBL4bu5IHRodeG6rXQgLSBDw7RuZyBuZ2jhu4cgQ-G6p24gVGjGoQ!5e0!3m2!1svi!2s!4v1677394131044!5m2!1svi!2s"
                 style="width: 100%; height: 100%"
                 allowfullscreen=""
                 loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"
-              ></iframe>
+              ></iframe> -->
+
+              <div id="map" class="w-100 mb-5" style="height: 400px;"></div>
+
             </div>
             <!-- map -->
 
@@ -245,6 +248,8 @@
     <!-- main -->
   </div>
 </div>
+<!-- <script defert type="module"  src="../../../js/utils/esri-leaflet-geocoder.js"></script>
+<script defert type="module"  src="../../../js/utils/leaflet.js"></script> -->
 <script defer type="module" src="../../../js/add-edit-post.js"></script>
 
 <%- include('../../partials/footerPanel'); %>
