--- a/src/views/partials/sidebarPanel-copy.ejs
+++ b/src/views/partials/sidebarPanel-copy.ejs
@@ -208,10 +208,7 @@
 </nav>
 <template id="navbarTemplate">
   <li class="nav-item" id="navItemMyPosts">
-    <a
-      class="nav-link active text-dark fw-bold"
-      href="https://puce-determined-raven.cyclic.app/posts/"
-    >
+    <a class="nav-link active text-dark fw-bold" href="http://localhost:5000/posts/">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="16"
@@ -252,7 +249,7 @@
     </a>
   </li>
   <li class="nav-item" id="navItemCategories">
-    <a class="nav-link text-dark" href="https://puce-determined-raven.cyclic.app/categories">
+    <a class="nav-link text-dark" href="http://localhost:5000/categories">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="16"
@@ -330,7 +327,7 @@
     </a>
   </li>
   <li class="nav-item" id="navItemPackageManagement">
-    <a class="nav-link text-dark" href="https://puce-determined-raven.cyclic.app/packages/">
+    <a class="nav-link text-dark" href="http://localhost:5000/packages/">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="16"
