--- a/src/views/forgot-password.ejs
+++ b/src/views/forgot-password.ejs
@@ -16,8 +16,12 @@
                       placeholder="Enter your email"
                       class="form-control mb-3"
                     />
-                    <div class="invalid text-danger"><% if (error) { %> <%= error %> <% } %></div>
-                    <div class="invalid text-danger"></div>
+
+                    <% if(locals.error){ %>
+                    <div class="invalid text-danger"><%= error %></div>
+                    <% } %> <% if (locals.message){ %>
+                    <h4>vui lòng check mail để thay đổi mật khảu</h4>
+                    <% } %>
                   </div>
                   <button type="submit" class="btn btn-primary w-100">Reset password</button>
                 </div>
