suggest post homepage

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -156,7 +156,9 @@
     </section>
   </main>
 </body>
-
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
+<script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
+<script type="module" src="../../js/suggestPost.js"></script>
 <script>
   const form = document.querySelector('form');
   const category_id = document.querySelector('select[name="category"]');
