--- a/src/views/forgot-password.ejs
+++ b/src/views/forgot-password.ejs
@@ -16,7 +16,7 @@
                       placeholder="Enter your email"
                       class="form-control mb-3"
                     />
-                    <div class="invalid text-danger"><% if (error) { %> <%= error %> <% } %></div>
+                    <div class="invalid text-danger"></div>
                     <div class="invalid text-danger"></div>
                   </div>
                   <button type="submit" class="btn btn-primary w-100">Reset password</button>
