--- a/src/views/layouts/layout.ejs
+++ b/src/views/layouts/layout.ejs
@@ -4,10 +4,7 @@
     <title><%= title %></title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <!-- Bootstrap CSS v5.2.1 -->
     <link
