--- a/src/views/reset-password.ejs
+++ b/src/views/reset-password.ejs
@@ -17,7 +17,7 @@
                       class="form-control my-3"
                     />
                     <input type="hidden" name="token" value="<%= token %>" />
-                    <div class="invalid text-danger"><% if (error) { %> <%= error %> <% } %></div>
+                    <div class="invalid text-danger"></div>
                     <div class="invalid text-success">
                       <% if (message) { %> <%= message %> <a href="signin"></a> <% } %>
                     </div>
