--- a/src/views/admin/posts/add-edit.ejs
+++ b/src/views/admin/posts/add-edit.ejs
@@ -82,7 +82,7 @@
               <div class="col-md-6">
                 <div class="form-group">
                   <label class="col-form-label">Số nhà</label>
-                  <input name="houseNumber" type="text" class="form-control" />
+                  <input autocomplete="off"  name="houseNumber" type="text" class="form-control" />
                   <div class="invalid-feedback"></div>
                 </div>
               </div>
@@ -91,7 +91,7 @@
               <div class="col-md-12">
                 <div class="form-group">
                   <label class="col-form-label">Địa chỉ chính xác</label>
-                  <input name="address" type="text" class="form-control" />
+                  <input  readonly  name="address" type="text" class="form-control " />
                   <div class="invalid-feedback"></div>
                 </div>
               </div>
