--- a/src/views/partials/sidebar.ejs
+++ b/src/views/partials/sidebar.ejs
@@ -46,4 +46,4 @@
 
   <% }) %> <% } %>
 </div>
-<div id="post-suggest" class="bg-white p-3 rounded-3 mb-2"></div>
+<div id="post-suggest" class="rounded-3 mb-2"></div>
