--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -130,5 +130,26 @@ https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js
     }, timeLeft);
   }
 });
+
+// call api category  http://localhost:5000/api/v1/categories
+
+// const navbarNav = document.querySelector('.navbar-nav');
+// const url = 'http://localhost:5000/api/v1/categories';
+
+
+// const getCategories = async () => {
+//   const response = await fetch(url);
+//   const data = await response.json();
+//   const categories = data.data;
+//   categories.forEach((category) => {
+//     navbarNav.innerHTML += `
+//     <li class="nav-item">
+//       <a class="nav-link" href="/category/${category._id}"> ${category.title} </a>
+//     </li>
+//     `;
+//   });
+// };
+
+// getCategories();
   
 </script>
