--- a/src/views/layouts/layout.ejs
+++ b/src/views/layouts/layout.ejs
@@ -5,6 +5,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <!-- meta icon -->
+    <link rel="icon" href="../../../img/logo.png" type="image/x-icon" />
 
     <!-- Bootstrap CSS v5.2.1 -->
     <link
