--- a/src/views/postDetails.ejs
+++ b/src/views/postDetails.ejs
@@ -194,7 +194,8 @@
     });
 
     const addressMap = document.getElementById('address').innerHTML;
-    const apiKey = 'LLdcdVjZhgjmo3jl7opmh0fh3w4wGI4W';
+    const apiKey = 'pk.d05369ff4143de5ef0440060e309c711';
+
     var map = L.map('map').setView([0, 0], 10);
 
     // Thêm tile layer
@@ -207,23 +208,26 @@
     // Add routing control
 
     fetch(
-      `https://www.mapquestapi.com/geocoding/v1/address?key=${apiKey}&inFormat=kvp&outFormat=json&location=${encodeURIComponent(
+      `https://us1.locationiq.com/v1/search?key=${apiKey}&q=${encodeURIComponent(
         addressMap
-      )}&thumbMaps=false&maxResults=1`
+      )}&format=json&`
     )
       .then((response) => response.json())
       .then((data) => {
-        const result = data.results[0];
-        const location = result.locations[0];
+        const result = data[0];
+        console.log('result ', result);
+        if (result && result.boundingbox.length > 0) {
+          const location = result;
 
-        const latitude = location.latLng.lat;
-        const longitude = location.latLng.lng;
-        marker = L.marker([latitude, longitude]).addTo(map);
-        map.setView([latitude, longitude], 80);
-        const markerPopupContent = addressMap;
-        const popup = L.popup().setContent(markerPopupContent);
-        marker.bindPopup(popup).openPopup();
-        console.log('data', data);
+          const latitude = location.lat;
+          const longitude = location.lon;
+          marker = L.marker([latitude, longitude]).addTo(map);
+          map.setView([latitude, longitude], 80);
+          const markerPopupContent = addressMap;
+          const popup = L.popup().setContent(markerPopupContent);
+          marker.bindPopup(popup).openPopup();
+          console.log('data', data);
+        }
       });
   </script>
 </body>
